--- a/w8-embedding_browser_testing/embedding_social/style.css
+++ b/w8-embedding_browser_testing/embedding_social/style.css
@@ -56,3 +56,18 @@ body{
 img {
   border-style: none;
 }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
