--- a/w8-embedding_browser_testing/widths-classes/style.css
+++ b/w8-embedding_browser_testing/widths-classes/style.css
@@ -1,5 +1,5 @@
 p {
-  color: #666666;
+  /*color: #666666;*/
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -8,7 +8,8 @@ h1{
 }
 
 body{
-  background-color:#ebe3ce;
+  /*background-color:#ebe3ce;*/
+  margin: 0
 }
 
 #container{
@@ -29,6 +30,14 @@ body{
 #nav {
     padding: 0;
 	list-style-type: none;
+  width: 100vw;
+}
+
+.fullwidth {
+  position: relative;
+  left: 50%;
+  transform: translate (-50%, 0);
+  width: 100vw;
 }
 
 #nav li {
