--- a/responsive_class/responsive_photos/styles.css
+++ b/responsive_class/responsive_photos/styles.css
@@ -7,8 +7,6 @@ body{
 .head{
   background:#009077;
   width:100%;
-  margin:0;
-  padding:0;
 }
 
 .main{
@@ -66,7 +64,7 @@ h2 a:hover{
 }
 
 h2 a:visited{
-  color:#313131;
+  color:gray;
 }
 
 h3{
@@ -80,9 +78,101 @@ aside h2{
   font-size:1.5em;
 }
 
-img{
+img {
   width:95%;
-  padding: 0 10px;
-  border:none;
+  padding:0 10px;
+  border: none;
   margin:5px auto;
+}
+
+@media all and (min-width:600px){
+
+  .head{
+    display:flex;
+    flex-flow:row;
+  }
+
+  header{
+    flex:1 auto;
+    justify-content: flex-start;
+  }
+
+  h1{
+    text-align: left;
+    padding:0 10px;
+  }
+
+  .nav{
+    flex-flow:row;
+  }
+
+  .nav li{
+    border:none;
+    margin:5px;
+    padding:10px;
+    background:#009077;
+  }
+
+  .nav a:hover{
+    background:#00806A;
+  }
+
+  .wrapper{
+    display:flex;
+    flex-flow:row;
+  }
+
+  .story{
+    display:flex;
+    flex-flow:row;
+  }
+
+  img{
+    width:10%;
+    height:0%;
+    padding:10px;
+    border: none;
+    margin:0;
+    flex:1 auto;
+  }
+
+  .summary{
+    flex:1 auto;
+  }
+
+  .main{
+    margin-left: 10px;
+  }
+
+  aside{
+    flex:1 auto;
+    margin-right:20px;
+    padding:10px;
+  }
+}
+
+@media all and (min-width:800px){
+
+  .head{
+    display:flex;
+    flex-flow:column;
+  }
+
+  h1{
+    text-align: center;
+    padding:0;
+    margin-top:5px;
+  }
+
+  .nav{
+    flex-flow:row;
+    justify-content: space-around;
+    background:#00a085;
+  }
+
+  .nav li{
+    background:#00a085;
+  }
+
+
 }
