--- a/styleoldc.css
+++ b/styleoldc.css
@@ -2,10 +2,14 @@ body{
   font-family:  'Roboto', Arial, sans-serif;
 }
 
-#nav, #footer, h1, h2, h3{
+#header, #nav, #footer, h1, h2, h3{
   font-family: 'Suez One', Georgia, serif;
 }
 
+#header .inner{
+  background: #07889B;
+  padding:10px;
+}
 
 #content .inner{
   background: #66B9BF;
@@ -18,6 +22,34 @@ body{
   padding:10px;
 }
 
+#nav ul{
+  display:flex;
+  flex-flow:row;
+  justify-content: space-around;
+  background: #EEAA7B;
+  color: #333;
+  list-style-type: none;
+  padding:10px;
+}
+
+#nav a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 10px 10px 10px;
+  font-weight: bold;
+}
+
+#nav li {
+  border-right: 1px solid rgba(255,255,255,.5);
+  padding:5px;
+  text-align:center;
+}
+
+#nav li:last-child {
+  border-right: none;
+}
+
 #footer{
   background: #EEAA7B;
   color:white;
@@ -25,45 +57,6 @@ body{
 }
 
 img, .caption {
-    display: none;
-}
-
-nav ul li {
-    display: block;
-    border-top: 1px #79896d solid;
-    background: #EEAA7B;
-    color: #333;
-}
-
-nav a {
-    color: #fff;
-    display: block;
-    text-decoration: none;
-    padding: 20px 30px;
-    font-weight: bold;
-}
-
-header {
-    display: flex;
-    flex-flow: row;
-    background-color: #07889B;
-    margin: 0;
-    padding: 0 10px;
-    font-family: 'Suez One', Georgia, serif;
-}
-
-.menu-trigger {
-    order: 1;
-    font-size: 1.75em;
-    width: 2em;
-}
-
-header h1 {
-    order: 2;
-    font-size: 2em;
-}
-
-nav ul {
     display: none;
 }
 
@@ -91,31 +84,6 @@ nav ul {
   }
 
 }
-
-@media screen and (min-width: 700px){
-
-    nav ul {
-        display: flex;
-    }
-
-    nav ul li {
-        border-top: none;
-    }
-
-    .menu-trigger {
-        display: none;
-    }
-
-    header h1 {
-        order: 1;
-    }
-
-    nav {
-        order: 2;
-    }
-
-}
-
 
 @media screen and (min-width:1000px){
 
