--- a/style.css
+++ b/style.css
@@ -77,6 +77,21 @@ nav ul {
     display: none;
 }
 
+.map-wrapper {
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+
+.map-wrapper iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
 @media screen and (min-width:600px){
 
   #pageBody{
